--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "__MSG_extension_name__",
   "author": "LvDoughSha绿蔸裟",
   "version": "1.0",
-  "default_locale": "zh",
+  "default_locale": "en",
   "description": "__MSG_extension_description__",
   "permissions": [
     "activeTab",
